# Lab5_Olteanu_Teodora

Laborator5/: CMakeLists.txt
Laborator5/src/Controller/: FilmController.cpp  FilmController.h
Laborator5/src/UI/: UI.cpp  UI.h
Laborator5/src/domain/: Film.cpp  Film.h
Laborator5/src/repository/: FilmRepository.cpp  FilmRepository.h
